<resources>
    <string name="app_name">Kitaplığım</string>
    <string name="register">Kayıt</string>
    <string name="sign_in">Giriş Yap</string>
    <string name="e_mail">E-mail </string>
    <string name="password">Şifre</string>
    <string name="to_login_page">ToLogin</string>
    <string name="to_registry_page">ToRegister</string>
    <string name="user_name">Kullanıcı Adı</string>
    <string name="create_new_account">Yeni bir hesap oluştur</string>
    <string name="forgot_password">Şifremi Unuttum</string>
    <string name="have_account">Zaten mevcut bir hesabın var mı ?</string>
    <string name="profile">Profil</string>
    <string name="main_page">Ana Sayfa</string>
    <string name="delete">Kitabı Sil</string>
    <string name="save">Kaydet</string>
    <string name="sign_out">Hesaptan Çık</string>
    <string name="add_new_book">Add a new book</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="did_radio_button">Okudum</string>
    <string name="doing_radio_button">Okuyorum</string>
    <string name="to_do_radio_button" >Okuyacağım</string>

    <string name="bottom_nav_did">Okudum</string>
    <string name="bottom_nav_doing">Okuyorum</string>
    <string name="bottom_nav_to_do" >Okuyacağım</string>



    <string-array name="saveTo_array">
        <item>Okudum</item>
        <item>Okuyorum</item>
        <item>Okuyacağım</item>

    </string-array>


</resources>