<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Activities.RegisterPageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_form">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="144dp"
            android:layout_height="163dp"
            android:src="@drawable/app_logo"
            android:transitionName="logo_image"
            />

        <TextView
            android:fontFamily="@font/ultra"
            android:id="@+id/logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_image"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:transitionName="logo_text" />

        <TextView
            android:fontFamily="@font/ultra"
            android:id="@+id/slogan_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_text"
            android:text="Devam etmek için kaydol"
            android:textSize="18dp" />

        <LinearLayout
            android:id="@+id/informationLinearLayoutInRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/slogan_name"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameTextInRegister"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/user_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInRegister"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInRegistter"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="#00000000"
                android:elevation="0dp"
                android:onClick="haveAnAccount"
                android:text="@string/have_account"
                android:textColor="@color/black"
                tools:ignore="RtlHardcoded" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/informationLinearLayoutInRegister"
            android:background="@drawable/login_button_style"
            android:onClick="signUp"
            android:text="Kaydol" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ProgressBar
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/progress_bar_background"
                android:elevation="10dp"
                android:padding="10dp" />
        </RelativeLayout>


    </RelativeLayout>


</LinearLayout>







