<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Activities.LoginPageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_form"
        >

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="144dp"
            android:layout_height="163dp"
            android:src="@drawable/app_logo"
            android:transitionName="logo_image" />

        <TextView
            android:id="@+id/logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_image"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:transitionName="logo_text" />

        <TextView
            android:id="@+id/slogan_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_text"
            android:text="Devam etmek için giriş yap"
            android:textSize="18dp" />

        <LinearLayout
            android:id="@+id/informationLinearLayoutInLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/slogan_name"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInLogin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="E-mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/passwordTextInLogin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="#00000000"
                    android:elevation="0dp"
                    android:onClick="makeNewAccount"
                    android:text="@string/create_new_account"
                    android:textColor="@color/black"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="#00000000"
                    android:elevation="0dp"
                    android:onClick="forgotPassword"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>






        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/informationLinearLayoutInLogin"
            android:background="@drawable/login_button_style"
            android:onClick="signIn"

            android:text="Giriş Yap" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">


            <ProgressBar

                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/progress_bar_background"
                android:elevation="10dp"
                android:padding="10dp"

                />


        </RelativeLayout>


    </RelativeLayout>


</LinearLayout>